--- a/_posts/2016-10-18-cbc-stats-1.md
+++ b/_posts/2016-10-18-cbc-stats-1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "Hamilton CBC Head to Head: Kinglets & Creepers"
-date:   2016-10-26
-excerpt: "How two tiny and elusive bird species can demonstrate the skill of Hamilton's Christmas Bird Count (CBC) volunteers"
+date:   2016-10-27
+excerpt: "How two tiny and elusive bird species can demonstrate the skill of Hamilton's Christmas Bird Count (CBC) volunteers."
 tag:
 - birding
 - Christmas Bird Count
@@ -11,20 +11,25 @@ tag:
 - Hamilton&#44; Ontario
 - bird records
 comments: false
+feature: /assets/img/cbc-onha/brown-creeper-2.jpg
 ---
 
-### Background
-
 In 2015, I took on the role of coordinator & compiler of the [Hamilton Christmas Bird Count (CBC)](http://hamiltonnature.org/birding/counts/christmas-bird-count/){:target="_blank"}. Since that time I've been poring through the vast amounts of data accumulated over the decades. In a series of short posts, I explore how the Christmas Bird Count records can reveal some interesting facts about bird species in Hamilton.
+{: .notice}
 
 ## Comparing Brown Creeper & Golden-crowned Kinglet
 
-<div><img src="/assets/img/cbc-onha/golden-crowned-kinglet.jpg" style="width:33%; padding:0.667em;padding-left:0;" align="left" /></div>
 Brown Creepers and Golden-crowned Kinglets are not closely related, however they are both great examples of species found only in winter in Hamilton that are a challenge to find unless you are well-prepared to find them. Rarely would a non-birder ever notice a Brown Creeper, and to a lesser extent the same applies to Golden-crowned Kinglets.
 
 Both species have several factors that make them more difficult to spot.
 
-<div><img src="/assets/img/cbc-onha/brown-creeper.jpg" style="width:33%; padding:0.667em;padding-right:0;padding-top:0;" align="right" /></div>Brown Creepers spend their time creeping up trees on the trunk and major branches, picking out hibernating insects & insect larvae from within bark crevices as food. They camouflage very well against the bark, enough to be unnoticable if it is either not right in front of you, or you don't know how to look for them. They are also small, and have a song & call that are high pitched enough that it is not uncommon to meet older birders who can no longer hear them at all.
+<figure class="half">
+    <a href="/assets/img/cbc-onha/golden-crowned-kinglet.jpg"><img src="/assets/img/cbc-onha/golden-crowned-kinglet.jpg"></a>
+    <a href="/assets/img/cbc-onha/brown-creeper.jpg"><img src="/assets/img/cbc-onha/brown-creeper.jpg"></a>
+    <figcaption>Golden-crowned Kinglet & Brown Creeper.</figcaption>
+</figure>
+
+Brown Creepers spend their time creeping up trees on the trunk and major branches, picking out hibernating insects & insect larvae from within bark crevices as food. They camouflage very well against the bark, enough to be unnoticable if it is either not right in front of you, or you don't know how to look for them. They are also small, and have a song & call that are high pitched enough that it is not uncommon to meet older birders who can no longer hear them at all.
 
 Golden-crowned Kinglets on the other hand, are found flocking together, often high in the treetops of deciduous trees, or anywhere in conifers, moving very quickly in and out of the shelter of the conifer. They are tiny (the smallest winter bird), and also have high-pitched calls that can be hard for some to hear. They feed on tiny caterpillars that somehow survive the winter in a frozen state -- a fact only discovered reletively recently, in the early 2000s.
 
