Updates to projects

--- a/_posts/2016-10-26-avitext.md
+++ b/_posts/2016-10-26-avitext.md
@@ -12,6 +12,7 @@ tag:
 - digital naturalist tools
 - mobile
 comments: false
+feature: /assets/img/cbc-onha/gbbg.jpg
 ---
 <div style="text-align:center;"><img src="/assets/img/avitext-sample.png" style="width:50%;" /></div>  
 <center><b>Avitext</b> is a quick and easy way to record observations on your mobile device while in the field.</center>
@@ -19,6 +20,8 @@ comments: false
 ## About
 **Avitext** is a plain text file format specification for bird species observations in the ABA region. It is designed to document checklists in the field as quickly as possible using a smartphone note-taking text application, such as iOS's Notes or Google's Keep app.
 
-## Read more...
+It intends to fill a need for a method that is more easily transferrable than pen & paper without becoming as burdensome and slow as currently available record-keeping mobile apps.
+
+## A work in progress...
 
 You can read more on the [GitHub repo](https://github.com/rgeraldporter/avitext-spec){:target="_blank"}, and can even comment or contribute ideas.
