Update of posts

--- a/_posts/2016-10-18-cbc-stats-1.md
+++ b/_posts/2016-10-18-cbc-stats-1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Hamilton CBC Head to Head: Kinglets & Creepers"
+title:  "Winter Counts of Golden-crowned Kinglets and Brown Creepers"
 date:   2016-10-27
-excerpt: "How two tiny and elusive bird species can demonstrate the skill of Hamilton's Christmas Bird Count (CBC) volunteers."
+excerpt: "How two tiny and elusive bird species can demonstrate the skill of Hamilton's Christmas Bird Count volunteers."
 tag:
 - birding
 - Christmas Bird Count
@@ -14,38 +14,44 @@ comments: false
 feature: /assets/img/cbc-onha/brown-creeper-2.jpg
 ---
 
-In 2015, I took on the role of coordinator & compiler of the [Hamilton Christmas Bird Count (CBC)](http://hamiltonnature.org/birding/counts/christmas-bird-count/){:target="_blank"}. Since that time I've been poring through the vast amounts of data accumulated over the decades. In a series of short posts, I explore how the Christmas Bird Count records can reveal some interesting facts about bird species in Hamilton.
-{: .notice}
+{% include_relative cbc-snippet.md %}
 
 ## Comparing Brown Creeper & Golden-crowned Kinglet
 
-Brown Creepers and Golden-crowned Kinglets are not closely related, however they are both great examples of species found only in winter in Hamilton that are a challenge to find unless you are well-prepared to find them. Rarely would a non-birder ever notice a Brown Creeper, and to a lesser extent the same applies to Golden-crowned Kinglets.
+[Brown Creepers](https://www.allaboutbirds.org/guide/Brown_Creeper/id){:target="_blank"} and [Golden-crowned Kinglets](https://www.allaboutbirds.org/guide/Golden-crowned_Kinglet/id){:target="_blank"} are not closely related, however they are both great examples of species found only in winter in Hamilton that are a challenge to find unless you are well-prepared to find them. Rarely would a non-birder ever notice a Brown Creeper, and to a lesser extent the same applies to Golden-crowned Kinglets.
 
 Both species have several factors that make them more difficult to spot.
 
-<figure class="half">
-    <a href="/assets/img/cbc-onha/golden-crowned-kinglet.jpg"><img src="/assets/img/cbc-onha/golden-crowned-kinglet.jpg"></a>
-    <a href="/assets/img/cbc-onha/brown-creeper.jpg"><img src="/assets/img/cbc-onha/brown-creeper.jpg"></a>
-    <figcaption>Golden-crowned Kinglet & Brown Creeper.</figcaption>
-</figure>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">A Brown Creeper, picking out hibernating insects from tree bark. McMaster Forest, Ancaster <a href="https://twitter.com/hashtag/Ontario?src=hash">#Ontario</a> <a href="https://twitter.com/hashtag/HamOnt?src=hash">#HamOnt</a> <a href="https://twitter.com/hashtag/birds?src=hash">#birds</a> <a href="https://t.co/K9HySxHM8e">pic.twitter.com/K9HySxHM8e</a></p>&mdash; Rob Porter (@rgeraldporter) <a href="https://twitter.com/rgeraldporter/status/689285996920356865">January 19, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Brown Creepers spend their time creeping up trees on the trunk and major branches, picking out hibernating insects & insect larvae from within bark crevices as food. They camouflage very well against the bark, enough to be unnoticable if it is either not right in front of you, or you don't know how to look for them. They are also small, and have a song & call that are high pitched enough that it is not uncommon to meet older birders who can no longer hear them at all.
 
-Golden-crowned Kinglets on the other hand, are found flocking together, often high in the treetops of deciduous trees, or anywhere in conifers, moving very quickly in and out of the shelter of the conifer. They are tiny (the smallest winter bird), and also have high-pitched calls that can be hard for some to hear. They feed on tiny caterpillars that somehow survive the winter in a frozen state -- a fact only discovered reletively recently, in the early 2000s.
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">A tiny breeding-plumaged male Golden-crowned Kinglet, with some extra red in his cap. Princess Point, <a href="https://twitter.com/hashtag/HamOnt?src=hash">#HamOnt</a> <a href="https://twitter.com/hashtag/birds?src=hash">#birds</a> <a href="http://t.co/xGO4BhNuLD">pic.twitter.com/xGO4BhNuLD</a></p>&mdash; Rob Porter (@rgeraldporter) <a href="https://twitter.com/rgeraldporter/status/585259418620682240">April 7, 2015</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+Golden-crowned Kinglets on the other hand, are found flocking together, often high in the treetops of deciduous trees, or anywhere in conifers, moving very quickly in and out of the shelter of the conifer. They are tiny (the smallest winter bird), and also have high-pitched calls that can be hard for some to hear. They feed on tiny caterpillars that somehow survive the winter in a frozen state -- a fact only [discovered reletively recently](http://www.nytimes.com/2003/01/07/science/scientist-at-work-bernd-heinrich-signs-of-survival-in-a-frozen-forest.html){:target="_blank"}, in the early 2000s.
 
 For both, the best bet for finding and counting these species is by ear. When that isn't practical, seeking out Black-capped Chickadee flocks in forested areas might reveal a mixed-species flock that might include one or both of these species. The kinglets will tend to group close together, and creepers will be in a flock that is spread across multiple trees, where they will climb up the trunk to near the top, then fly down to the bottom of the trunk of the next tree to climb up again.
 
-#### The Data
+#### The HCBC Data
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/gcki-brcr.png" style="" /></div>  
+<figure>
+	<a href="/assets/img/cbc-onha/gcki-brcr.png"><img src="/assets/img/cbc-onha/gcki-brcr.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
-What's amazing in the Hamilton CBC data is that both species are regularly counted, and more or less line up with one another -- when one is up, the other is up. If one is scarce, so is the other. They are not closely related, and do sometimes flock together in mixed-species flocks, but save for one year with a record count of kinglets, they line up well.
+What's amazing in the HCBC data is that both species are regularly counted, and more or less line up with one another -- when one is up, the other is up. If one is scarce, so is the other. They are not closely related, and do sometimes flock together in mixed-species flocks, but save for one year with a record count of kinglets, they line up well.
 
 The first reason I feel this chart is significant has nothing to do with the birds themselves however, it is that it demonstrates the consistent skills of the volunteer counters in the field. There are no years where these species were not found, and low years appear to be explained by very poor weather conditions.
 
 Beyond that the consistency of the chart over the decades shows that these species *may* have stable populations. To verify this, we can take a look at another chart, which takes into account the amount of effort put into counting birds as "count-per-hour".
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/gcki-brcr-perhour.png" style="" /></div>  
+<figure>
+	<a href="/assets/img/cbc-onha/gcki-brcr-perhour.png"><img src="/assets/img/cbc-onha/gcki-brcr-perhour.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
 What we see is that the raw count data isn't very misleading. There's a couple spikes here, but otherwise it remains fairly consistent over time with perhaps a slightly below average count in the last 15 years.
 
+Both these species depend on wooded areas, something that has been on the decline in Hamilton since the count started in 1921. Fifty years ago, the Hamilton Mountain still had many woodlots, and is now reduced to a small handful. It's amazing there hasn't been a drastic decline locally yet, and hopefully we'll be seeing and hearing (or for most, not seeing and hearing) them for a while yet.
