--- a/_posts/2016-10-28-2016-cbc-stats-eust.md
+++ b/_posts/2016-10-28-2016-cbc-stats-eust.md
@@ -15,8 +15,7 @@ comments: false
 feature: /assets/img/cbc-onha/european-starlings.jpg
 ---
 
-In 2015, I took on the role of coordinator & compiler of the [Hamilton Christmas Bird Count (CBC)](http://hamiltonnature.org/birding/counts/christmas-bird-count/){:target="_blank"}. Since that time I've been poring through the vast amounts of data accumulated over the decades. In a series of short posts, I explore how the Christmas Bird Count records can reveal some interesting facts about bird species in Hamilton.
-{: .notice}
+{% include_relative cbc-snippet.md %}
 
 ## European Starlings
 
@@ -24,9 +23,12 @@ By now you likely know the stories about how European Starlings came to invade N
 
 ### Some years it was almost the Christmas Starling Count...
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/eust-total.png" style="" /></div> 
+<figure>
+	<a href="/assets/img/cbc-onha/eust-total.png"><img src="/assets/img/cbc-onha/eust-total.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
-Yes, that chart is **European Starlings** vs **all bird species counted** during the Hamilton CBCs. 
+Yes, that chart is **European Starlings** vs **all bird species counted** during the HCBCs. 
 
 Here's some observations about just how massive their numbers have been:
 
@@ -37,21 +39,36 @@ Here's some observations about just how massive their numbers have been:
 
 In case you're wondering, these ratios hold true even when accounting for volunteer count hours:
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/eust-per-hour.png" style="" /></div> 
+<figure>
+	<a href="/assets/img/cbc-onha/eust-per-hour.png"><img src="/assets/img/cbc-onha/eust-per-hour.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
 The populations have dropped though since the 1990s, settling down to being between 10-15% of the overall count. This is a much more reasonable population, considering starlings are species well known to accumulate in very large flocks, especially in winter.
+
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">A winter plumaged starling. Dundas, Ontario.<a href="https://twitter.com/hashtag/HamOnt?src=hash">#HamOnt</a> <a href="https://twitter.com/hashtag/birds?src=hash">#birds</a> <a href="http://t.co/wBFyGvyWzs">pic.twitter.com/wBFyGvyWzs</a></p>&mdash; Rob Porter (@rgeraldporter) <a href="https://twitter.com/rgeraldporter/status/559891380349042688">January 27, 2015</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Since European Starlings have been so dominant in the count in some years, it is worth taking a look at what the count looks like without them at all. 
 
 These charts show the total count without any starlings, followed by the per-hour rate of birds counted each year excluding starlings:
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/eust-without.png" style="" /></div> 
+<figure>
+	<a href="/assets/img/cbc-onha/eust-without.png"><img src="/assets/img/cbc-onha/eust-without.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/eust-without-per-hour.png" style="" /></div> 
+<figure>
+	<a href="/assets/img/cbc-onha/eust-without-per-hour.png"><img src="/assets/img/cbc-onha/eust-without-per-hour.png"></a>
+	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
+</figure>
 
 This reveals that non-starling populations actually significantly increased in the late 1990s and early 2000s, and are currently in a general decline.
 
 Someday soon I'll need to see if I can assemble a similar chart of non-indigenous species (NIS) vs indigenous species. Rock Piegons, House Finches, House Sparrows, and *possibly* Canada Geese (not NIS, but are re-introduced and arguably invasive) are just a few possible species to compare.
 
-<div style="text-align:center;"><img src="/assets/img/cbc-onha/european-starling.jpg" style="" /></div> 
+<figure>
+    <a href="/assets/img/cbc-onha/european-starling.jpg"><img src="/assets/img/cbc-onha/european-starling.jpg"></a>
+    <figcaption>European Starling male in alternate (breeding) plumage, McMaster Forest, Ancaster, Ontario.</figcaption>
+</figure>
 
