--- a/_posts/2016-11-01-cbc-ltdu.md
+++ b/_posts/2016-11-01-cbc-ltdu.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "The Exponential Rise of the Long-tailed Duck"
+title:  "The Rise of the Long-tailed Duck"
 date:   2016-11-01
 excerpt: "Western Lake Ontario has become home to a globally significant population of waterfowl, and the Hamilton Christmas Bird Count has documented this transition"
 tag:
@@ -19,18 +19,16 @@ comments: false
 feature: /assets/img/cbc-onha/ltdu.jpg
 ---
 
+{% include_relative cbc-snippet.md %}
 
-In 2015, I took on the role of coordinator & compiler of the [Hamilton Christmas Bird Count (HCBC)](http://hamiltonnature.org/birding/counts/christmas-bird-count/){:target="_blank"}. Since that time I've been poring through the vast amounts of data accumulated over the decades. In a series of short posts, I explore how the Christmas Bird Count records can reveal some interesting facts about bird species in Hamilton.
-{: .notice}
-
-The Western side of Lake Ontario is considered to be a [Important Bird Area by IBA Canada](http://www.ibacanada.org/site.jsp?siteID=ON022){:target="_blank"}, a designation partly owed to the reletively recent abundance of an arctic duck species, the [Long-tailed Duck](https://www.allaboutbirds.org/guide/Long-tailed_Duck/id){:target="_blank"}.
+The western side of Lake Ontario is considered to be a ["Important Bird Area" by IBA Canada](http://www.ibacanada.org/site.jsp?siteID=ON022){:target="_blank"}, a designation partly owed to the reletively recent abundance of an arctic deep-diving duck species, the [Long-tailed Duck](https://www.allaboutbirds.org/guide/Long-tailed_Duck/id){:target="_blank"}.
 
 <figure>
-    <a href="/assets/img/cbc-onha/ltdu.jpg"><img src="/assets/img/cbc-onha/ltdu.jpg"></a>
-    <figcaption>Long-tailed Duck, March 28, 2015. Burlington Canal Lift Bridge, Hamilton/Burlington Border</figcaption>
+    <a href="/assets/img/cbc-onha/ltdu-male.jpg"><img src="/assets/img/cbc-onha/ltdu-male.jpg"></a>
+    <figcaption>Long-tailed Duck drake (male), Burlington Canal Lift Bridge, Hamilton/Burlington Border</figcaption>
 </figure>
 
-The Long-tailed Duck is a rather chatty bird, so much so [that its now-retired racist name](https://ourfinefeatheredfriends.wordpress.com/2014/03/09/whats-in-a-name-long-tailed-ducks-stage-late-winter-invasion-of-northeast-tennessee/){:target="_blank"} was probably inspired from the chatter. Since the late 1990s the counted population in the Hamilton Christmas Bird Count (HCBC) of this species has exponentially exploded, with previous counts in the dozens and hundreds suddenly escalating to the thousands and tens-of-thousands.
+The Long-tailed Duck is a [rather chatty bird](http://www.xeno-canto.org/species/Clangula-hyemalis){:target="_blank"}, so much so [that its now-retired racist name](https://ourfinefeatheredfriends.wordpress.com/2014/03/09/whats-in-a-name-long-tailed-ducks-stage-late-winter-invasion-of-northeast-tennessee/){:target="_blank"} was probably inspired from the chatter. Since the late 1990s the counted population in the Hamilton Christmas Bird Count (HCBC) of this species has exponentially exploded, with previous counts in the dozens and hundreds suddenly escalating to the thousands and tens-of-thousands.
 
 ### The Data
 
@@ -41,6 +39,17 @@ The Long-tailed Duck is a rather chatty bird, so much so [that its now-retired r
 
 One of the [potentially qualifying criteria](http://www.birdlife.org/datazone/info/ibacritglob){:target="_blank"} that IBA Canada uses for designating an Important Bird Area is the population of a species in a limited area -- if a more than 1% of the estimated global population of a bird species is in one area, that automatically qualifies said area for designation. This is the case for the Western Lake Ontario IBA, due to the overwhelming numbers of wintering Long-tailed Ducks.
 
+<figure>
+    <a href="/assets/img/cbc-onha/ltdu-female.jpg"><img src="/assets/img/cbc-onha/ltdu-female.jpg"></a>
+    <figcaption>Long-tailed Duck hen (female), Burlington Canal Lift Bridge, Hamilton/Burlington Border</figcaption>
+</figure>
+
 It may appear in the data that the last couple years have not been so great for this duck, but regular surveys now done throughout the winter starting in 2015 have shown that this is more of an artifact of the timing and limited scope of the HCBC. Since the count is only one day, a single day with poor visibility (flurries, rain, fog) or rough waters can throw off a year's count of deep water diving ducks. These artifacts are usually offset by the average over many years' counts.
 
 If you ever get a chance to go down to the pier by the [Burlington Canal Lift Bridge](https://www.google.ca/maps/place/Burlington+Canal+Lift+Bridge/@43.2990589,-79.7953305,15z/data=!4m2!3m1!1s0x0:0x5ad3eefbdcca9d80?sa=X&ved=0ahUKEwji6eqY04rQAhUk2IMKHUyPCTYQ_BIIezAP){:target="_blank"} in the winter, it is a very cold place (the lake breeze on two sides is very chilling), but on a calm and clear day it can be a great experience to visit hundreds -- perhaps even thousands -- of these chatty, small arctic ducks.
+
+
+<figure>
+    <a href="/assets/img/cbc-onha/ltdus.jpg"><img src="/assets/img/cbc-onha/ltdus.jpg"></a>
+    <figcaption>Raft of Long-tailed Ducks, Burlington Canal Lift Bridge, Hamilton/Burlington Border</figcaption>
+</figure>
