--- a/_posts/2016-10-28-evgr-pufi.md
+++ b/_posts/2016-10-28-evgr-pufi.md
@@ -17,39 +17,39 @@ comments: false
 feature: /assets/img/cbc-onha/evening-grosbeak.jpg
 ---
 
-In 2015, I took on the role of coordinator & compiler of the [Hamilton Christmas Bird Count (CBC)](http://hamiltonnature.org/birding/counts/christmas-bird-count/){:target="_blank"}. Since that time I've been poring through the vast amounts of data accumulated over the decades. In a series of short posts, I explore how the Christmas Bird Count records can reveal some interesting facts about bird species in Hamilton.
-{: .notice}
+{% include_relative cbc-snippet.md %}
 
-If you speak to anyone who has been engaged with the Christmas Bird Count in Southern Ontario for more than twenty years, and ask about what they miss the most about the earlier counts, there's a good chance the subject of grosbeaks will come up. There was a time when the large yellow Evening Grosbeaks, and sometimes their pinkish cousins the Pine Grosbeak were bound to show up in healthy sized flocks for the winter.
+If you speak to anyone who has been engaged with the Christmas Bird Count in Southern Ontario for more than twenty years, and ask about what they miss the most about the earlier counts, there's a good chance the subject of grosbeaks will come up. There was a time when the large yellow Evening Grosbeaks, and sometimes their pinkish cousins the Pine Grosbeak, were bound to show up in large flocks for the winter.
 
-Those times appear to have passed, though it isn't entirely clear yet why that is, though there are many theories.
+Those times appear to have passed, and though it isn't entirely clear yet why that is, there are many theories.
 
 <figure>
 	<a href="/assets/img/cbc-onha/evgr-pufi.png"><img src="/assets/img/cbc-onha/evgr-pufi.png"></a>
 	<figcaption>Hamilton Christmas Bird Count records, 1953-2015.</figcaption>
 </figure>
 
-As you can see, from the 1960s through the mid-1980s, most years had Evening Grosbeaks counted, and some of those years numbered in the hundreds.
+From the 1960s through the mid-1980s, most years had occurrences of Evening Grosbeaks, and the count for the species in some of those years numbered in the hundreds.
 
-As a comparison, the Purple Finch (another "winter finch"), has seen decline but not as extreme as Evening Grosbeaks. Between 1990 and 2010, only two Evening Grosbeaks were counted. Purple Finches have seen many "single digit" years but few years without any count at all.
+As a comparison, the Purple Finch (another "winter finch"), has seen decline but not as extreme as Evening Grosbeaks. Between 1990 and 2010, only two Evening Grosbeaks were counted in total; whereas Purple Finches have occurred regularly, although their count is usually in single-digit numbers.
 
-(Purple Finch observations may also be artificially lowered due to the recent over-abundance of the similar-looking introduced species House Finch.)
+(Purple Finch observations since the 1980s may also be artificially lowered due to the recent over-abundance of the similar-looking introduced species, House Finch.)
 
 <figure>
 	<a href="/assets/img/cbc-onha/purple-finch.jpg"><img src="/assets/img/cbc-onha/purple-finch.jpg"></a>
 	<figcaption>Purple Finch, Sulphur Spring Conservation Area, Hanover, Ontario</figcaption>
 </figure>
 
-
 So where did the Evening Grosbeaks go?
 
-Some theories are pointing to the warmer winters -- the Evening Grosbeak need not come as far south anymore to survive the winter. Certainly there's been a noted increase in winter populations in the "cottage country" regions of Ontario, with many more of these grosbeaks appearing at feeders than ever had previously. 
+Some theories are [pointing to the warmer winters](http://www.birdsource.org/Features/Evegro/){:target="_blank"} -- the Evening Grosbeak need not come as far south anymore to survive the winter. Certainly there's been a noted increase in winter populations in the "cottage country" regions of Ontario, with many more of these grosbeaks appearing at feeders than ever had previously. 
 
 It's also possible that the feeders themselves are partly responsible. With the greatly increased human population of the Muskokas and surrounding regions, the number of feeders must have certainly gone up dramatically.
 
 One other possibility is that the population(s) of Evening Grosbeaks that once visited Southern Ontario in flocks has been either wiped out or greatly diminished, leaving the only visitors either migrants that are headed further south to upstate New York or vagrants that have strayed from their flocks. This wouldn't be unprecidented: winter populations of Field Sparrows, Eastern Meadowlarks, and White-winged Crossbills once were quite common and are now gone or very sporatic.
 
-There is some hope of their return. In 2014-2015, a small flock overwintered in Toronto's High Park bird sanctuary, and that same year saw 6 of these grosbeaks counted in the Hamilton CBC. 
+There's plenty of theories out there, as [this ABA Blog article](http://blog.aba.org/2012/03/what-is-happening-to-evening-grosbeaks.html){:target="_blank"} points out it could be climate change, pesticides, cars, resource development, or even increased window collisions.
+
+There is some hope of their return. In 2014-2015, a small flock overwintered in [Toronto's High Park bird sanctuary](https://www.youtube.com/watch?v=EXnMALj8t9I){:target="_blank"} (video link), and that same year saw 6 of these grosbeaks counted in the HCBC. 
 
 Out of the over 250 species I've seen within Hamilton, Evening Grosbeak is not one of them. I'm hoping soon that changes.
 
